--- a/inst/www/header_styles.css
+++ b/inst/www/header_styles.css
@@ -499,3 +499,322 @@ header{
 			font-size: 22px;
 		}
 	}
+
+/* ## footer */
+
+/* UN2 Footer */
+.footer-fluid {
+  border-top: #009edb solid 0.4rem;
+  background: #333333;
+  padding: 0 20px;
+}
+
+footer.footer-un2 {
+  margin-top: 0;
+  padding-top: 31.7967997456px;
+  padding-bottom: 3.3rem;
+  border-top: none;
+}
+
+.list-inline {
+  padding-left: 0;
+  list-style: none;
+  margin-left: -5px;
+}
+
+.footer-un2 .social-media li a span.icon-text {
+  border: 0;
+  clip: rect(1px, 1px, 1px, 1px);
+  -webkit-clip-path: inset(100%);
+  clip-path: inset(100%);
+  height: 1px;
+  overflow: hidden;
+  padding: 0;
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+}
+
+.footer-un2 .list-inline > li {
+  display: inline-block;
+}
+
+.footer-un2 .footer-brand {
+  margin-left: -15px;
+}
+
+.footer-un2 .footer-brand a {
+  display: block;
+  padding: 0;
+  width: 17rem;
+  height: 5.1987767584rem;
+  background: url(../img/logo-en-reverse.svg) no-repeat;
+  background-position: top left;
+}
+
+body.i18n-ar .footer-un2 .footer-brand a {
+  background-image: url(../img/logo-ar-reverse.svg);
+}
+
+body.i18n-zh-hans .footer-un2 .footer-brand a {
+  background-image: url(../img/logo-zh-reverse.svg);
+}
+
+body.i18n-fr .footer-un2 .footer-brand a {
+  background-image: url(../img/logo-fr-reverse.svg);
+}
+
+body.i18n-ru .footer-un2 .footer-brand a {
+  background-image: url(../img/logo-ru-reverse.svg);
+}
+
+body.i18n-es .footer-un2 .footer-brand a {
+  background-image: url(../img/logo-es-reverse.svg);
+}
+
+.footer-un2 .footer-brand a span {
+  border: 0;
+  clip: rect(1px, 1px, 1px, 1px);
+  -webkit-clip-path: inset(100%);
+  clip-path: inset(100%);
+  height: 1px;
+  overflow: hidden;
+  padding: 0;
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+}
+
+.footer-un2 .social-media {
+  margin-top: 1.7rem;
+}
+
+.footer-un2 .social-media li a::before {
+  font-size: 24px;
+  font-size: 2.4rem;
+  font-family: "FontAwesome" !important;
+  content: "ïˆ°";
+  color: #c4c4c4;
+  display: inline-block;
+}
+
+.footer-un2 .social-media li a:hover, .social-media li a:focus {
+  background-color: transparent;
+  outline: none;
+}
+
+.social-media li.twitter a::before {
+  content: "ï‚™";
+}
+
+.social-media li.instagram a::before {
+  content: "ï…­";
+}
+
+.social-media li.linkedin a::before {
+  content: "ï‚Œ";
+}
+
+.social-media li.youtube a::before {
+  content: "ï…ª";
+}
+
+.social-media li.flickr a::before {
+  content: "ï…®";
+}
+
+.social-media li.vkontakte a::before {
+  content: "ï†‰";
+}
+
+.footer-un2 .donate {
+  margin-top: 1.7rem;
+  margin-left: 2.8rem;
+  margin-right: 0.1rem;
+  padding-left: 2.1rem;
+  border-left: gray solid 0.1rem;
+}
+
+.footer-un2 .donate a {
+  text-decoration: none;
+}
+
+.footer-un2 .footer-links .divider {
+  border-top: #5b5b5b solid 1px;
+  margin: 1.6rem 0 1.9rem 0;
+  padding: 0 1rem;
+}
+
+.footer-un2 .footer-links .nav li {
+  padding: 0 1.3rem 0 1rem;
+  border-right: gray solid 0.3rem;
+}
+
+.footer-un2 .footer-links .nav li.last {
+  padding-right: 0;
+  border-right: none;
+}
+
+h5.social-media-heading, .h5.social-media-heading {
+  font-size: 17px;
+  font-size: 1.7rem;
+  color: #c4c4c4;
+  letter-spacing: 0.8px;
+  line-height: 1.05;
+  display: inline-block;
+  margin-right: 2.5rem;
+}
+
+.footer-un2 .social-media .nav.list-inline {
+  float: right;
+}
+
+.footer-un2 .social-media li a {
+  padding: 0;
+  margin-right: 2.8rem;
+  background-color: transparent;
+  display: inline-block;
+}
+
+.footer-un2 .footer-links .nav li > a {
+  font-weight: 500;
+  font-size: 12px;
+  font-size: 1.2rem;
+  text-decoration: none;
+  color: white;
+  letter-spacing: 0.77px;
+  line-height: 1.1667;
+  padding: 0;
+  text-transform: uppercase;
+}
+
+.footer-un2 .footer-links .nav li > a:hover, .footer-un2 .footer-links .nav li > a:focus {
+  background-color: transparent;
+  outline: none;
+}
+
+.home-footer .divider {
+  border: none;
+  border-top: solid;
+  border-width: 0.3rem;
+  border-color: #ededed;
+  margin: 0 1.4rem 2.5rem 1.4rem;
+}
+
+.home-footer h4, .home-footer .h4 {
+  font-size: 20px;
+  font-size: 2rem;
+  color: #454545;
+  letter-spacing: 0.95px;
+  line-height: 1.1;
+  text-transform: uppercase;
+  margin-bottom: 1.4rem;
+}
+
+.home-footer h4::after, .home-footer .h4::after {
+  content: "";
+  display: block;
+  margin-left: 1px;
+  margin-top: 1.1rem;
+  border-top: #009edb solid 3px;
+  width: 15%;
+}
+
+.gray-bg {
+  background-color: #f2f2f2 !important;
+}
+
+.home-footer ul {
+  font-size: 14px;
+  font-size: 1.4rem;
+  color: #454545;
+  letter-spacing: -0.35px;
+  line-height: 1.35;
+  margin-bottom: 2rem;
+}
+
+.home-footer ul li a {
+  padding: 0;
+  display: inline;
+  color: #454545;
+}
+
+.topmargin {
+  margin-top: 5.5rem !important;
+}
+
+.home-footer ul li::before {
+  font-size: 10px;
+  font-size: 1rem;
+  font-family: "FontAwesome" !important;
+  content: "ï„‘";
+  float: left;
+  margin-left: -2.198rem;
+  padding-top: 0.3000428633rem;
+  color: #c4c4c4;
+}
+
+.home-footer ul li {
+  margin-bottom: 1rem;
+  padding-left: 2.38rem;
+}
+
+/* Grid */
+@media (max-width: 767px) {
+  #brand-bar.navbar {
+    padding: 0 !important;
+  }
+
+  .navbar-header {
+    padding-top: 26px !important;
+  }
+
+  .navbar-toggle {
+    margin-top: -10px;
+    margin-right: 0;
+  }
+
+  #language-switcher {
+    float: right;
+  }
+
+  a.navbar-brand.navbar-brand-img.pull-left.flip {
+    margin-top: 20px !important;
+  }
+
+  .navbar-header .navbar-btn::after {
+    border-right: none !important;
+  }
+}
+@media (min-width: 768px) {
+  .container {
+    width: 768px;
+  }
+}
+@media (min-width: 992px) {
+  .container {
+    width: 992px;
+  }
+}
+@media (min-width: 1200px) {
+  .container {
+    width: 1170px;
+  }
+}
+@media (min-width: 1400px) {
+  .container {
+    width: 1344px;
+  }
+}
+.flex-container {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-flex-flow: row wrap;
+  flex-flow: row wrap;
+  -ms-flex-flow: row wrap;
+  -moz-flex-flow: row wrap;
+  justify-content: space-around;
+}
