--- a/inst/www/header_styles.css
+++ b/inst/www/header_styles.css
@@ -230,6 +230,7 @@ header{
 .custom-width {
     margin-left: auto;
     margin-right: auto;
+    min-height: 64% !important;
     max-width: 70%;  /* adjust as needed */
 }
 
