--- a/inst/www/layout_styles.css
+++ b/inst/www/layout_styles.css
@@ -18,6 +18,7 @@
   border-top: 0.4rem solid #008fd5;
   padding: 20px;
   flex-shrink: 0; /* Keep footer at the bottom */
+  margin-top: 10% !important;
 }
 
 /* Media query for mobile phones */
