--- a/inst/www/header_styles.css
+++ b/inst/www/header_styles.css
@@ -812,3 +812,54 @@ h5.social-media-heading, .h5.social-media-heading {
   -moz-flex-flow: row wrap;
   justify-content: space-around;
 }
+
+/* Language Switcher Styles */
+.brand-bar__welcome {
+  display: flex;
+  align-items: center;
+}
+
+.language-switcher {
+  display: flex;
+  align-items: center;
+  margin-left: 20px;
+  position: relative;
+}
+
+.language-select {
+  background-color: transparent;
+  border: 1px solid #4d4d4d;
+  border-radius: 3px;
+  color: #4d4d4d;
+  font-size: 12px;
+  padding: 4px 24px 4px 8px;
+  cursor: pointer;
+  appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  background-image: url("data:image/svg+xml;utf8,<svg fill='%234d4d4d' height='24' viewBox='0 0 24 24' width='24' xmlns='http://www.w3.org/2000/svg'><path d='M7 10l5 5 5-5z'/></svg>");
+  background-repeat: no-repeat;
+  background-position: right 2px center;
+  background-size: 16px;
+}
+
+.language-select:focus {
+  outline: none;
+  border-color: #008FD5;
+}
+
+.language-select option {
+  background-color: #fff;
+  color: #4d4d4d;
+  padding: 4px;
+}
+
+@media screen and (max-width: 768px) {
+  .language-switcher {
+    margin-left: 10px;
+  }
+  .language-select {
+    font-size: 11px;
+    padding: 3px 20px 3px 6px;
+  }
+}
